--- a/pages/collect/collect.wxml
+++ b/pages/collect/collect.wxml
@@ -1,3 +1,5 @@
+<text bindtap='chooseVideo'>选择</text>
+<text bindtap='uploadVideo'>上传</text>
 <!--logs.wxml
 <view class='main serch'>
   <view class='search'>
