--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -1,103 +1,31 @@
 
-
-<view class='box'>
-  <view class='wenzi'>全部</view>
-  <view class='wenzi'>军事</view>
+<view class='video_top'>
+  <view class='video_tit'>免费视频</view>
+  <view class='video_more'><navigator url=''>更多</navigator></view>
 </view>
-
-<view class='boxx'></view>
-<view class='boxxx'></view>
-
-
-<view class='dabox'>
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate'  class='nn'></navigator>
-    <view class='nw'>美食</view>
+<view class='allshow'>
+  <view class='showdetail' wx:for='{{list}}'>
+      <navigator url=''>
+    <view class='contant'>
+      <image src='{{item.avatarUrl}}'></image>
+      <text>{{item.roomName}}</text>
+    </view>
+    <view class='introduce'>{{item.roomIntroduce}}</view>
+      </navigator>
   </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>音乐大厅</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate'  class='nn'></navigator>
-    <view class='nw'>颜值</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate'  class='nn'></navigator>
-    <view class='nw'>英雄联盟</view>
-  </view>
-   
 </view>
-
-<view class='dabox'>
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>王者荣耀</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate'  class='nn'></navigator>
-    <view class='nw'>设计师</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate'  class='nn'></navigator>
-    <view class='nw'>二次元</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate'  class='nn'></navigator>
-    <view class='nw'>数码科技</view>
-  </view>
-   
+<view class='video_top'>
+  <view class='video_tit'>收费视频</view>
+  <view class='video_more'><navigator url=''>更多</navigator></view>
 </view>
-
-<view class='dabox'>
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>科普</view>
+<view class='allshow'>
+  <view class='showdetail' wx:for='{{list}}'>
+      <navigator url=''>
+    <view class='contant'>
+      <image src='{{item.avatarUrl}}'></image>
+      <text>{{item.roomName}}</text>
+    </view>
+    <view class='introduce'>{{item.roomIntroduce}}</view>
+      </navigator>
   </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>军事</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>汽车</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>刺激战场</view>
-  </view>
-   
 </view>
-
-<view class='dabox'>
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>堡垒之夜</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>DOTA2</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>逆水寒</view>
-  </view>
-
-  <view class='n'>
-    <navigator url='../7/7' open-type='redirect' open-type='navigate' class='nn'></navigator>
-    <view class='nw'>娱乐</view>
-  </view>
-   
-</view>
-
