--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -1,50 +1,32 @@
-.box{
-  width:100%;
-  height:50rpx;
-  display:flex;
-  justify-content: center;
+.allshow{
+  overflow: hidden;padding: 0 20rpx;
 }
-
-.wenzi{
-  margin-left:20rpx;
-  margin-right:20rpx;
+.showdetail{
+  float: left;width: 48%;overflow: hidden;margin-bottom: 10rpx;font-size: 28rpx;
 }
-
-.boxx{
-  margin-top: 26rpx;
-  height:4rpx;
-  width:80rpx;
-  background-color:#ffd200;
-  margin-left:42rpx;
-} 
-
-.boxxx{
-  height:2rpx;
-  width:100%;
-  background-color:#eee;
-} 
-
-.dabox{
-  display: flex;
-  justify-content: center;
+.showdetail:nth-child(even){
+  float: right;
 }
-.n{
-  align-content: center;
-  margin:30rpx;
+.showdetail .contant{
+  position: relative;overflow: hidden;height: 240rpx;border: 1rpx solid #ddd;
 }
-.nn{
-  
-  background:#eee;
-  border-bottom-left-radius:100%;
-  border-bottom-right-radius: 100%;
-  border-top-left-radius:100%;
-  border-top-right-radius: 100%;
-  height: 120rpx;
-  width:120rpx;
+.showdetail view image{
+  width: 100%;height: 100%;
 }
-.nw{
-  margin-top:20rpx;
-  text-align:center;
-  font-size:26rpx;
-  width:120rpx;
+.showdetail view text{
+  position: absolute;left: 0;
+  bottom: 2rpx;z-index: 9;background: rgba(0, 0, 0, 0.4);
+  width:100%;display:block;color: #fff;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;
+}
+.introduce{
+  white-space: nowrap;overflow: hidden;text-overflow: ellipsis;width: 100%;
+}
+.video_tit{
+  padding-left: 20rpx;margin-left: 20rpx;border-left: 5rpx solid orange;float: left;
+}
+.video_more{
+  float: right;margin-right: 20rpx;
+}
+.video_top{
+  overflow: hidden;font-size: 32rpx;font-weight: bold;margin: 20rpx 0;
 }
