--- a/pages/upload/uplod.wxml
+++ b/pages/upload/uplod.wxml
@@ -1,7 +1,35 @@
 <view class="photo-add">
     <form bindsubmit="formSubmit">
     <view class="desc">
+        <input type='text' placeholder="填写视频标题" />
+    </view>
+    <view class="desc">
         <textarea name="desc" placeholder="填写备注（可以不写）" />
+    </view>
+    
+    <view class="weui-cells">
+      <view class="weui-cell">
+        <view class="weui-cell__bd">
+          <view class="weui-uploader">
+            <view class="weui-uploader__hd">
+              <view class="weui-uploader__title">点击可预览选好的图片</view>
+              <view class="weui-uploader__info"></view>
+            </view>
+            <view class="weui-uploader__bd">
+              <view class="weui-uploader__files">
+                <block wx:for="{{photos}}" wx:for-item="image">
+                  <view class="weui-uploader__file">
+                    <image class="weui-uploader__img" src="{{image.src}}" data-src="{{image}}" bindtap="previewImage"></image>
+                  </view>
+                </block>
+              </view>
+              <view class="weui-uploader__input-box">
+                <view class="weui-uploader__input" bindtap="chooseImage"></view>
+              </view>
+            </view>
+          </view>
+        </view>
+      </view>
     </view>
     
     <view class="select-album">
@@ -21,7 +49,6 @@
     <view class="add-video">
     	<text bindtap="addVideo" style="color:blue;">选择或拍摄视频</text>
     </view>
-    
     
     
     <view class="btn-box">
