--- a/pages/upload/upload.wxml
+++ b/pages/upload/upload.wxml
@@ -45,7 +45,7 @@
     </view>
 
     <view class="add-video">
-    	<text bindtap="chooseVideo" style="color:blue;">选择或拍摄视频</text>
+    	<text bindtap="{{videoPath ? 'deleteVideo' : 'chooseVideo'}}" style="color:blue;">{{videoPath ? '删除视频' : '选择或拍摄视频'}}</text>
     </view>
     
     
