--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,5 +1,5 @@
 <view class="section tc">
-  <video id="myVideo" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400"
+  <video id="myVideo" src="{{detail.video}}"
     danmu-list="{{danmuList}}" enable-danmu danmu-btn controls autoplay="{{true}}"></video>
   <view class="btn-area">
 
@@ -9,10 +9,10 @@
 <!-- 评论 -->
 
 <view class="tool">
-  <view class='videotit'>视频标题111，</view> 
+  <view class='videotit'>{{detail.title}}</view> 
   <view class="tool-item">
     <image src=""></image>
-    <text>视频发布者</text>
+    <text>{{detail.nickName ? detail.nickName : "管理员"}}</text>
   </view>
 </view>
 
