--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,6 +1,6 @@
 <view class="section tc">
   <video id="myVideo" src="{{detail.video}}"
-    danmu-list="{{danmuList}}" enable-danmu danmu-btn controls autoplay="{{true}}"></video>
+    danmu-list="{{danmuList}}" enable-danmu danmu-btn controls></video>
   <view class="btn-area">
 
   </view>
