--- a/pages/upload/upload.wxss
+++ b/pages/upload/upload.wxss
@@ -5,19 +5,15 @@ page {
     font-size:1em;
 }
 
-.photo-add {
-    
-}
-
 .photo-add .desc {
     border-bottom:#eee solid 1px;
     padding:.5em;
     background:#FFFFFF;
+    font-size:32rpx;
 }
 
 .photo-add .desc textarea {
     width:100%;
-    font-size:1em;
     height:6em;
 }
 
@@ -49,9 +45,51 @@ page {
 }
 
 .picker {
-    font-size:1em;
+    font-size:32rpx;
     padding:.75em;
     background:#FFFFFF;
     border-top:#eee solid 1px;
     border-bottom:#eee solid 1px;
 }
+.weui-uploader__bd {
+  margin: 0;
+}
+
+.item {    
+  position:relative;
+  margin:0 60rpx;box-sizing: border-box;
+  height:400rpx;
+  border:2rpx solid #f9c4c2;
+  overflow:hidden;
+}
+.itemImg{
+  position: absolute;
+  left: 0;
+  top:0; 
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index:1;
+}
+.delete {    
+  position:absolute;
+  right:0;
+  top:0;
+  /* background:#ccc; */
+  opacity:1;
+  height: 36rpx;
+  font-size:22rpx;
+  font-weight:700;
+  padding:0 8rpx 0 10rpx;
+  color: #999;
+  z-index: 9999;
+}
+
+
+
+
+
+
+
+
+
