--- a/pages/upload/upload.wxss
+++ b/pages/upload/upload.wxss
@@ -1,85 +1,57 @@
-
 @import "../common/weui.wxss";
 page {
     background:#f2f2f2;
     font-size:1em;
 }
-
 .photo-add .desc {
-    border-bottom:#eee solid 1px;
-    padding:.5em;
-    background:#FFFFFF;
-    font-size:32rpx;
+  border-bottom:#eee solid 1px;padding:.5em;
+  background:#FFFFFF;font-size:32rpx;
 }
-
 .photo-add .desc textarea {
-    width:100%;
-    height:6em;
+  width:100%;height:6em;
 }
-
 .photo-add .select-album {
-    font-size:1em;
-    padding:.75em 0 0 0;
+  font-size:1em;
+  padding:.75em 0 0 0;
 }
-
 .photo-add .select-album .title {
-    padding-bottom:.25em;
-    padding-left:.75em;
-    color:#666;
-    font-size:.875em;
+  padding-bottom:.25em;padding-left:.75em;
+  color:#666;font-size:.875em;
 }
-
 .photo-add .btn-box {
     padding:1em 2em;
 }
-
 .photo-add .video-box {
-    margin-top:1em;
-    text-align:center;
-    width: 100%
+  margin-top:1em;text-align:center;
+  width: 100%
 }
-
 .photo-add .add-video {
-    padding-top:1em;
-    text-align:center;
+  padding-top:1em;
+  text-align:center;
 }
-
 .picker {
-    font-size:32rpx;
-    padding:.75em;
-    background:#FFFFFF;
-    border-top:#eee solid 1px;
-    border-bottom:#eee solid 1px;
+  font-size:32rpx;padding:.75em;background:#FFFFFF;
+  border-top:#eee solid 1px;
+  border-bottom:#eee solid 1px;
 }
 .weui-uploader__bd {
   margin: 0;
 }
-
 .item {    
   position:relative;
   margin:0 60rpx;box-sizing: border-box;
-  height:400rpx;
-  border:1rpx solid #D9D9D9;
+  height:400rpx;border:1rpx solid #D9D9D9;
   overflow:hidden;
 }
 .itemImg{
-  position: absolute;
-  left: 0;
-  top:0; 
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index:1;
+  position: absolute;left: 0;
+  top:0; width: 100%;height: 100%;
+  overflow: hidden;z-index:1;
 }
 .delete {    
   position:absolute;
-  right:0;
-  top:0;
-  opacity:1;
-  height: 36rpx;
-  font-size:22rpx;
-  font-weight:700;
-  padding:0 8rpx 0 10rpx;
-  color: #999;
-  z-index: 9999;
+  right:0; top:0;opacity:1;
+  height: 36rpx;font-size:22rpx;
+  font-weight:700;padding:0 8rpx 0 10rpx;
+  color: #999;z-index: 9999;
 }
