--- a/pages/buy/buy.wxss
+++ b/pages/buy/buy.wxss
@@ -1,25 +1,22 @@
 .allshow{
   overflow: hidden;
 }
-.tm2{overflow: hidden;}
-
+.tm2{
+  box-shadow: 0px 0px 10px 1px #ddd;border-radius: 10px;margin: 20rpx;overflow: hidden;
+}
 .hezi2{
   background-color:#000;
-  height:110rpx;
-  width:110rpx;
+  height:110rpx;width:110rpx;
   border-bottom-left-radius: 10rpx;
   border-bottom-right-radius: 10rpx;
   border-top-left-radius: 10rpx;
   border-top-right-radius: 10rpx;
-  margin-left: 30rpx;
-  margin-top: 26rpx;
-  float: left
+  margin: 15rpx;float: left
 }
-
 .wenzi2{
- margin-top: 30rpx;
- margin-left: 26rpx;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
- font-size: 32rpx;float: left;
+  margin: 15rpx 0;
+  white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
+  font-size: 32rpx;float: left;
 }
 .wztop{
   white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
