--- a/pages/collect/collect.wxss
+++ b/pages/collect/collect.wxss
@@ -27,12 +27,10 @@
   margin:0;
 }
 .wenzi1{
-  font-size:26rpx;
-  margin-left: 10rpx;
+  font-size:26rpx;margin-left: 10rpx;
 }
 .wenzi11{
-  font-size:22rpx;
-  color:#5e5e5e
+  font-size:22rpx;color:#5e5e5e
 }
 .tm{
   width: 47%;float: left;
@@ -47,17 +45,11 @@
   box-shadow: 0px 0px 10px 1px #ddd;border-radius: 10px;margin: 20rpx 0;overflow: hidden;
 }
 .hezi2{
-  background-color:#000;
-  height:110rpx;width:110rpx;
-  border-bottom-left-radius: 10rpx;
-  border-bottom-right-radius: 10rpx;
-  border-top-left-radius: 10rpx;
-  border-top-right-radius: 10rpx;
-  margin: 15rpx;float: left
+  background-color:#000;height:110rpx;width:110rpx;
+  border-radius: 10rpx;margin: 15rpx;float: left
 }
 .wenzi2{
-  margin: 15rpx 0;
-  white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
+  margin: 15rpx 0;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;
   font-size: 32rpx;float: left;
 }
 .wztop{
