--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -32,7 +32,7 @@
 .rm-det{
   width: 340rpx;
   float: left;overflow: hidden;
-  height: 440rpx;
+  height: 440rpx;margin-bottom: 5rpx;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 1px #ddd;
 }
