--- a/pages/upload/upload.wxml
+++ b/pages/upload/upload.wxml
@@ -22,9 +22,9 @@
             <view class="weui-uploader__bd item">
               <view class="weui-uploader__files">
                 <view class="weui-uploader__file">
-                  <image class="weui-uploader__img itemImg" src="{{imagePath}}" data-src="{{imagePath}}" bindtap="previewImage"></image>
+                  <image class="weui-uploader__img itemImg" src="{{thumbPath[0]}}" data-src="{{thumbPath[0]}}" bindtap="previewImage"></image>
                 </view>
-                <view wx:if='{{imagePath}}'>
+                <view wx:if='{{thumbPath.length > 0}}'>
                   <view bindtap='deleteImage' class='delete'>X</view>
                 </view>
                 <view class="weui-uploader__input-box itemImg" wx:else>
@@ -36,12 +36,12 @@
         </view>
       </view>
     </view>
-    <view class="video-box" wx:if="{{videoPath}}">
-      <video class="video" src="{{videoPath}}"></video>
+    <view class="video-box" wx:if="{{videoPath.length > 0}}">
+      <video class="video" src="{{videoPath[0]}}"></video>
       <view style="text-align:center;color:green;font-size:14px;padding-top:7px;">当前视频大小为{{videoSize}}M</view>
     </view>
     <view class="add-video">
-    	<text bindtap="{{videoPath ? 'deleteVideo' : 'chooseVideo'}}" style="color:blue;">{{videoPath ? '删除视频' : '选择或拍摄视频'}}</text>
+    	<text bindtap="{{videoPath.length > 0 ? 'deleteVideo' : 'chooseVideo'}}" style="color:blue;">{{videoPath > 0 ? '删除视频' : '选择或拍摄视频'}}</text>
     </view>
     <block wx:if='{{showUploadProgress}}'>
       <view class="btn-box">
