--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,7 +3,7 @@
   overflow: hidden;box-shadow: 0px 0px 10px 0px #ddd;margin: 20rpx 0;border-radius: 5px;
 }
 .bt-img{
-  float: left;width:  150rpx;
+  float: left;width:  150rpx;margin-left: 5px;margin-top:5px;
   /* width: 35%; */
   margin-right: 20rpx;
 }
@@ -11,7 +11,7 @@
   width: 100%;height: 150rpx;
 }
 .bt-txt{
-  float: left;width: 75%;
+  float: left;width: 74%;padding: 10rpx 0;
   /* width: 60%; */
 }
 .bt-txt-tit{
