--- a/pages/upload/upload.wxml
+++ b/pages/upload/upload.wxml
@@ -9,8 +9,11 @@
       <input name='title' type='text' placeholder="填写视频标题" />
     </view>
     <view class="desc">
-      <textarea name="introduce" placeholder="填写备注（可以不写）" />
+      <textarea name="introduce" placeholder="填写备注（选填）" />
     </view> 
+    <view class='charge'>
+      <text>金额</text><input name='charge' type='text' placeholder="填写收费金额,默认免费。" />
+    </view>
     <view class="weui-cells">
       <view class="weui-cell">
         <view class="weui-cell__bd">
