--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -9,7 +9,7 @@
   <view class='bcom' bindtap='gotozb'><text>我的直播间</text> <view> > </view> </view>
   <view class='bcom'><navigator url='../setRoom/setRoom?id={{item.openId}}'><text>直播设置</text> <view> > </view>  </navigator></view>
   <view class='bcom'><navigator url='../buy/buy'><text>我的购买</text> <view> > </view>  </navigator></view>
-  <view class='bcom'><navigator url='../buy/buy'><text>我的上传</text> <view> > </view>  </navigator></view>
+  <view class='bcom'><navigator url='../load/load'><text>我的上传</text> <view> > </view>  </navigator></view>
   <view class='bcom'><navigator url='../upload/upload'><text>上传视频</text> <view> > </view> </navigator></view>
   <!-- <view class='rcord'>浏览记录</view>
     <view class='rclist'>
