--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -10,7 +10,7 @@
     <text>{{detail.nickName ? detail.nickName : "管理员"}}</text>
   </view>
 </view>
-<view bindtap='reward'>pay</view>
+<view bindtap='wxPay'>pay</view>
 <view class="comment_release">
   <view class="left">
     <textarea class="text" placeholder-class="weui-input" fixed="true" maxlength="-1" show-confirm-bar="false" cursor-spacing="15" auto-height="true" bindtap="bindReply" focus="{{releaseFocus}}" placeholder="写评论" />
