--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -5,8 +5,9 @@
   <view wx:else if = "{{watchPower === true}}">
   <video id="myVideo" src="{{detail.video}}" danmu-list="{{danmuList}}" enable-danmu danmu-btn controls></video>
   </view>
-  <view class="btn-area" wx:if="{{detail.charge > 0}}">观看完整版需支付{{detail.charge}}元，您可以试看5秒</view>
-  <view class="btn-area" wx:else>您可以免费观看本视频</view>
+  <view class="btn-area" wx:if="{{detail.is_charge == 1 && detail.power == 0}}">观看完整版需支付{{detail.charge}}元，您可以试看5秒</view>
+  <view class="btn-area"  wx:if="{{detail.is_charge == 1 && detail.power == 1}}">已付款</view>
+  <view class="btn-area" wx:if="{{detail.is_charge == 0}}">免费视频</view>
 </view>
 <!-- 评论 -->
 <view class="tool">
@@ -22,6 +23,6 @@
     <textarea class="text" placeholder-class="weui-input" fixed="true" maxlength="-1" show-confirm-bar="false" cursor-spacing="15" auto-height="true" bindtap="bindReply" focus="{{releaseFocus}}" placeholder="写评论" />
     <view class="line" />
   </view>
-  <!-- <button form-type="submit" class="submit">发送</button> -->
-    <button bindtap="bindSendDanmu" class='submit'>发送弹幕</button>
+  <button form-type="submit" class="submit" bindtap='addData'>发送</button>
+    <!-- <button bindtap="bindSendDanmu" class='submit'>发送</button> -->
 </view>
