--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -17,12 +17,12 @@
     <text>{{detail.nickName ? detail.nickName : "管理员"}}</text>
   </view>
 </view>
-<view bindtap='wxPay'>pay</view>
+<!-- <view bindtap='wxPay'>pay</view> -->
 <view class="comment_release">
   <view class="left">
     <textarea class="text" placeholder-class="weui-input" fixed="true" maxlength="-1" show-confirm-bar="false" cursor-spacing="15" auto-height="true" bindtap="bindReply" focus="{{releaseFocus}}" placeholder="写评论" />
     <view class="line" />
   </view>
-  <button form-type="submit" class="submit" bindtap='addData'>发送</button>
+  <button form-type="submit" class="submit" bindtap=''>发送</button>
     <!-- <button bindtap="bindSendDanmu" class='submit'>发送</button> -->
 </view>
