--- a/pages/setRoom/setRoom.wxml
+++ b/pages/setRoom/setRoom.wxml
@@ -6,6 +6,31 @@
     <view><text class='bold'>直播间介绍：</text><textarea placeholder='请输入您的直播介绍' value='{{roomIntroduce}}' name='roomIntroduce' class='textarea'></textarea></view>
     <view class='setup'><text class='bold'>主播名：</text><input placeholder='请输入您的名字' value='{{anchorName}}' name='anchorName'></input></view>
     <view><text class='bold'>主播简介：</text><textarea placeholder='请输入您的详细介绍' value='{{anchorIntroduce}}'       name='anchorIntroduce' class='textarea'></textarea></view>
+    <view class="weui-cells">
+      <view class="weui-cell">
+        <view class="weui-cell__bd">
+          <view class="weui-uploader">
+            <view class="weui-uploader__hd">
+              <view class="weui-uploader__title">封面图片:</view>
+              <view class="weui-uploader__info"></view>
+            </view>
+            <view class="weui-uploader__bd item">
+              <view class="weui-uploader__files">
+                <view class="weui-uploader__file">
+                  <image class="weui-uploader__img itemImg" src="{{thumbPath[0]}}" data-src="{{thumbPath[0]}}" bindtap="previewImage"></image>
+                </view>
+                <view wx:if='{{thumbPath.length > 0}}'>
+                  <view bindtap='deleteImage' class='delete'>X</view>
+                </view>
+                <view class="weui-uploader__input-box itemImg" wx:else>
+                  <view class="weui-uploader__input" bindtap="chooseImage"></view>
+                </view>
+              </view>
+            </view>
+          </view>
+        </view>
+      </view>
+    </view>
   </view>
   <view>
     <view class='formtit'>高级设置</view>
