--- a/pages/setRoom/setRoom.wxss
+++ b/pages/setRoom/setRoom.wxss
@@ -1,4 +1,5 @@
 /* pages/setRoom/setRoom.wxss */
+@import "../common/weui.wxss";
 .setform{
   padding: 0 20rpx;font-size: 24rpx;
 }
@@ -9,7 +10,7 @@
   float: left;line-height: 52rpx;font-weight: bold;
 }
 .textarea{
-  width: 100%;padding: 10rpx;box-sizing: border-box;height: 100px;
+  width: 100%;padding: 10rpx;box-sizing: border-box;height: 80px;
 }
 .quality{
   width: 50%;display: inline-block;margin-bottom: 5rpx;
@@ -32,3 +33,38 @@
 .bold{
   font-weight: bold;
 }
+.wx-switch-input{width:42px !important;height:20px !important;}
+.wx-switch-input::before{width:41px !important;height: 20px !important;}
+.wx-switch-input::after{width: 18px !important;height: 18px !important;}
+.weui-cells{
+  border: 1px solid #fff;margin-top: 0;
+}
+.weui-cell__bd{
+  border: 1px solid #fff;
+}
+.weui-uploader{
+  border: 1px solid #fff;
+}
+.weui-cell{
+  border: 1px solid #fff;padding: 0;font-size: 24rpx;font-weight: bold;
+}
+.item {    
+  position:relative;
+  margin:0 45rpx;box-sizing: border-box;
+  height:400rpx;
+  border:1rpx solid #D9D9D9;
+  overflow:hidden;
+}
+.itemImg{
+  position: absolute;left: 0;margin: 0;
+  top:0; width: 100%;height: 100%;
+  overflow: hidden;z-index:1;
+}
+.delete {    
+  position:absolute;
+  right:0; top:0;opacity:1;
+  height: 36rpx;font-size:22rpx;
+  font-weight:700;padding:0 8rpx 0 10rpx;
+  color: #999;z-index: 9999;
+}
+
