--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -4,6 +4,9 @@
   </view>
   <view wx:else if = "{{watchPower === true}}">
   <video bindtimeupdate="timeupdate" id="myVideo" src="{{detail.video}}" danmu-list="{{danmuList}}" enable-danmu danmu-btn controls></video>
+  <cover-view class='follow-right' bindtap='collect'>
+      <cover-view>{{collect_status == 1 ? '已关注' : '+关注'}}</cover-view>
+  </cover-view>
   </view>
   <view class="btn-area" wx:if="{{detail.is_charge == 1 && detail.power == 0}}">观看完整版需支付{{detail.charge}}元，您可以试看5秒</view>
   <view class="btn-area"  wx:if="{{detail.is_charge == 1 && detail.power == 1}}">已付款</view>
